Fix bug parsing states
- Change int map because of CLion bug
- Offer possibility to switch off semantic annotator